[package]
authors = ["Michael Vines <mvines@gmail.com"]
categories = ["api-bindings"]
description = "Jupiter Aggregator API bindings"
edition = "2021"
license = "WTFPL"
name = "jup-ag"
readme = "README.md"
repository = "https://github.com/mvines/rust-jup-ag"
version = "0.2.4"

[dependencies]
base64 = "0.13.0"
bincode = "1.3.3"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
solana-sdk = "~1.9.18"
thiserror = "1.0.31"
tokio = "1.19.2"

[dev-dependencies]
itertools = "0.10"
tokio = {version = "1", features = ["full"]}
solana-client = "1.9.18"
spl-associated-token-account = "1.0.2"
spl-token = "3.2.0"
